[workspace]
members = [
    "contracts/vault_router",
    "contracts/vault_flex",
    "contracts/vault_l3",
    "contracts/vault_l6",
    "contracts/vault_l12",
    "contracts/strategy_vault",
    "contracts/harvester",
    "contracts/governance",
    "contracts/guardian_multisig",
    "contracts/shared",
]
resolver = "2"

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = 0
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true