[package]
name    = "vault_router"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20"
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "20", features = ["testutils"] }
shared = { path = "../shared", features = ["testutils"] }